@@ -11,6 +11,7 @@ use UNIVERSAL::require;
 
 use FusionInventory::Agent::Tools;
 use FusionInventory::Agent::Logger;
+use FusionInventory::Agent::Storage;
 use FusionInventory::Agent::Task::Deploy::Datastore::WorkDir;
 use FusionInventory::Agent::Task::Deploy::DiskFree;
 
@@ -20,6 +21,7 @@ sub new {
     die "no path parameter" unless $params{path};
 
     my $self = {
+        config => $params{config},
         path   => File::Spec->rel2abs($params{path}),
         logger => $params{logger} ||
                   FusionInventory::Agent::Logger->new(),
@@ -101,6 +103,34 @@ sub diskIsFull {
     $logger->debug("Free space on $self->{path}: $freeSpace");
     # 400MB Free, should be set by a config option
     return ($freeSpace < 2000);
+}
+
+sub getP2PNet {
+    my ($self) = @_;
+
+    if (!$self->{p2pnetstorage}) {
+        $self->{p2pnetstorage} = FusionInventory::Agent::Storage->new(
+            logger    => $self->{logger},
+            directory => $self->{config}->{vardir}
+        );
+    }
+
+    return unless $self->{p2pnetstorage};
+
+    return $self->{p2pnetstorage}->restore( name => "p2pnet" );
+}
+
+sub saveP2PNet {
+    my ($self, $peers) = @_;
+
+    return unless $self->{p2pnetstorage};
+
+    # Avoid to save the peers cache too often. This is not even critical if
+    # the p2pnet peers cache is not saved after the last updates
+    if (!$self->{save_expiration} || time > $self->{save_expiration}) {
+        $self->{p2pnetstorage}->save( name => "p2pnet", data => $peers );
+        $self->{save_expiration} = time + 60;
+    }
 }
 
 # imported from File-Path-2.09
