@@ -80,7 +80,8 @@ sub download {
             $self->{logger}->debug("can't enable P2P: $EVAL_ERROR")
         } else {
             my $p2p = FusionInventory::Agent::Task::Deploy::P2P->new(
-                logger => $self->{logger}
+                datastore   => $self->{datastore},
+                logger      => $self->{logger}
             );
             eval {
                 @peers = $p2p->findPeers(62354);
@@ -161,7 +162,7 @@ sub _download {
     if ($response->code != 200) {
         if ($response->code != 404 || $response->status_line() =~ /Nothing found/) {
             $self->{logger}->debug2("Remote peer $peer is useless, we should forget it out for a while");
-            #$self->{p2pnet}->forget($peer) if $self->{p2pnet};
+            $self->{p2pnet}->forgetPeer($peer) if $self->{p2pnet};
         }
         return;
     }
